# bibtox

./: Justfile  README.md  bibtox  pyproject.toml
src/: bib2html
test/: bibinputs.json  gold  gold-bib  gold-html  homepages.json  test.bib
