[project]
name = "mort-www"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bibtexparser==2.0.0b7",
    "yattag>=1.16.0",
    "rich>=13.7.1",
    "click>=8.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
