[project]
name = "bibtox"
version = "0.1.0"
description = "Parse BibTeX files to reformat and sort as BibTeX or HTML"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bibtexparser==2.0.0b7",
    "yattag>=1.16.0",
    "rich>=13.7.1",
    "click>=8.1.8",
]
[tool.ruff.lint]
select = ["ALL"]
